[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "chrono",
] }
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
